workloads/bootstrap/tftpd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tftpd
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: tftpd
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: tftpd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pxe
        app.kubernetes.io/component: tftpd
    spec:
      nodeSelector:
        node-role.cluster.local/tftpd: "true"
      hostNetwork: true
      containers:
      - name: tftpd
        image: cluster.local/tftpd:latest
        imagePullPolicy: Never
        securityContext:
          readOnlyRootFilesystem: true
          capabilities:
            drop: [ALL]
            add:
            - NET_BIND_SERVICE
            - SETUID
            - SETGID
            - SYS_CHROOT
        ports:
        - name: tftp
          containerPort: 69
          hostPort: 69
        volumeMounts:
        - name: config-ro
          mountPath: /config
        - name: config-rw
          mountPath: /tftp/config
        - name: images
          mountPath: /tftp/pxe
          subPath: pxe
          readOnly: true
      volumes:
      - name: config-ro
        configMap:
          name: tftp
      - name: config-rw
        emptyDir: {}
      - name: images
        persistentVolumeClaim:
          claimName: images
