workloads/bootstrap/boot-server.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: boot-server
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: boot-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: boot-server
  ingress:
  - toPorts:
    - ports:
      - port: "80"
    fromEntities:
    - all
---
apiVersion: v1
kind: Service
metadata:
  name: boot-server
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: boot-server
  annotations:
    io.cilium/lb-ipam-ips: "cluster.bootServer.fixedIPv4,cluster.bootServer.fixedIPv6"
spec:
  type: LoadBalancer
  ipFamilies: [IPv4, IPv6]
  ipFamilyPolicy: RequireDualStack
  selector:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: boot-server
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot-server
  labels:
    app.kubernetes.io/name: pxe
    app.kubernetes.io/component: boot-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pxe
      app.kubernetes.io/component: boot-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pxe
        app.kubernetes.io/component: boot-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.0
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: node-settings
          mountPath: /node-settings
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: boot-server.conf
        - name: images
          mountPath: /images/pxe
          subPath: pxe
          readOnly: true
        - name: cache
          mountPath: /var/cache/nginx
      volumes:
      - name: config
        configMap:
          name: nginx
      - name: node-settings
        configMap:
          name: node-settings
      - name: images
        persistentVolumeClaim:
          claimName: images
      - name: cache
        emptyDir: {}
